[package]
name = "prediction-poll-wasm"
version = "0.16.0"
description = "Poll feed wasm"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
prediction-poll-data = { path = "../program_data", default-features = false, features = ["wasm"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
solana-sdk-types = { path = "../solana_types" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[lib]
name = "prediction_poll_wasm"
crate-type = ["cdylib", "rlib"]
